// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader renders a themed PageHeader component 1`] = `
<Header
  className="sc-bdVaJa iwfSKB"
  theme={[ThemeObject]}
>
  <div>
    Some text here
  </div>
</Header>
`;

exports[`PageHeader renders a themed PageHeader component 2`] = `
<header
  className="sc-bdVaJa iwfSKB"
>
  <div>
    Some text here
  </div>
</header>
`;
